--- a/Secure Data Lake on Cloud Storage : Challenge Lab/ARC119.md
+++ b/Secure Data Lake on Cloud Storage : Challenge Lab/ARC119.md
@@ -46,8 +46,7 @@
 - 📘 **Create an entry group**  
 - 🏷️ **Create a tag template (Storage bucket)**  
 
-<div style="padding: 15px; margin: 10px 0;">
-<p><strong>☁️ Run in Cloud Shell:</strong></p>
+## ⚙️ Lab Environment Setup:
 
 **🌐Launch Cloud Shell:**
 Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
@@ -55,11 +54,11 @@ Start your Google CloudShell session by [clicking here](https://console.cloud.go
 ## 💻 **Execute in Cloud Shell**  
 
 ```
-curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Develop%20Serverless%20Apps%20with%20Firebase%20%3A%20Challenge%20Lab/gsp344.sh
+curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Secure%20Data%20Lake%20on%20Cloud%20Storage%20%3A%20Challenge%20Lab/ARC119-1.sh
 
-sudo chmod +x gsp344.sh
+sudo chmod +x ARC119-1.sh
 
-./gsp344.sh
+./ARC119-1.sh
 ```
 
 ---
@@ -73,8 +72,7 @@ sudo chmod +x gsp344.sh
 - 🔗 **Attach an existing Cloud Storage bucket to the zone**  
 - 🏷️ **Create a tag template (Storage bucket)**  
 
-<div style="padding: 15px; margin: 10px 0;">
-<p><strong>☁️ Run in Cloud Shell:</strong></p>
+## ⚙️ Lab Environment Setup:
 
 **🌐Launch Cloud Shell:**
 Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
@@ -82,11 +80,11 @@ Start your Google CloudShell session by [clicking here](https://console.cloud.go
 ## 💻 **Execute in Cloud Shell**  
 
 ```
-curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Develop%20Serverless%20Apps%20with%20Firebase%20%3A%20Challenge%20Lab/gsp344.sh
+curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Secure%20Data%20Lake%20on%20Cloud%20Storage%20%3A%20Challenge%20Lab/ARC119-2.sh
 
-sudo chmod +x gsp344.sh
+sudo chmod +x ARC119-2.sh
 
-./gsp344.sh
+./ARC119-2.sh
 ```
 
 ---
@@ -100,8 +98,7 @@ sudo chmod +x gsp344.sh
 - 🔗 **Attach an existing BigQuery Dataset to the Lake**  
 - 🏷️ **Create a tag template (BigQuery Dataset)**  
 
-<div style="padding: 15px; margin: 10px 0;">
-<p><strong>☁️ Run in Cloud Shell:</strong></p>
+## ⚙️ Lab Environment Setup:
 
 **🌐Launch Cloud Shell:**
 Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
@@ -109,11 +106,11 @@ Start your Google CloudShell session by [clicking here](https://console.cloud.go
 ## 💻 **Execute in Cloud Shell**  
 
 ```
-curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Develop%20Serverless%20Apps%20with%20Firebase%20%3A%20Challenge%20Lab/gsp344.sh
+curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Secure%20Data%20Lake%20on%20Cloud%20Storage%20%3A%20Challenge%20Lab/ARC119-3.sh
 
-sudo chmod +x gsp344.sh
+sudo chmod +x ARC119-3.sh
 
-./gsp344.sh
+./ARC119-3.sh
 ```
 
 ---
@@ -127,8 +124,7 @@ sudo chmod +x gsp344.sh
 - 🔗 **Attach an existing BigQuery Dataset to the Lake**  
 - 📍 **Create Entities**  
 
-<div style="padding: 15px; margin: 10px 0;">
-<p><strong>☁️ Run in Cloud Shell:</strong></p>
+## ⚙️ Lab Environment Setup:
 
 **🌐Launch Cloud Shell:**
 Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
@@ -136,11 +132,11 @@ Start your Google CloudShell session by [clicking here](https://console.cloud.go
 ## 💻 **Execute in Cloud Shell**  
 
 ```
-curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Develop%20Serverless%20Apps%20with%20Firebase%20%3A%20Challenge%20Lab/gsp344.sh
+curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Secure%20Data%20Lake%20on%20Cloud%20Storage%20%3A%20Challenge%20Lab/ARC119-4.sh
 
-sudo chmod +x gsp344.sh
+sudo chmod +x ARC119-4.sh
 
-./gsp344.sh
+./GSP382-4.sh
 ```
 
 ---
