--- a/Secure Data Lake on Cloud Storage : Challenge Lab/ARC119.md
+++ b/Secure Data Lake on Cloud Storage : Challenge Lab/ARC119.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨🌐 Secure Data Lake on Cloud Storage - Challenge Lab || ARC119 ✨  
+🌐 Secure Data Lake on Cloud Storage - Challenge Lab || ARC119 ✨  
 
 <div align="center">
 
