--- a/Google Appsheet: getting started/GSP 883.md
+++ b/Google Appsheet: getting started/GSP 883.md
@@ -6,7 +6,7 @@
   </a>
 </div>
 
-## 🔑 Solution [here](curl -LO https://github.com/Arcade-With-Us/Google-Cloud-Labs/refs/main/Google%20Appsheet%3A%20getting%20started/Personal%20Contacts.xlsx)
+## 🔑 Solution [here]()
 
 ---
 
@@ -27,7 +27,7 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**Download Excel file from here:**[Click here]()
+**Download Excel file from here:**[Click here](curl -O https://github.com/Arcade-With-Us/Google-Cloud-Labs/refs/main/Google%20Appsheet%3A%20getting%20started/Personal%20Contacts.xlsx)
 
 ---
 
