--- a/Google Appsheet: getting started/GSP 883.md
+++ b/Google Appsheet: getting started/GSP 883.md
@@ -27,7 +27,7 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**Download Excel file from here:**[Click here](curl -LO https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/main/Google%20Appsheet%3A%20getting%20started/Personal%20Contacts.xlsx)
+**Download Excel file from here:**[Click here](Personal Contacts.xlsx)
 
 ---
 
