--- a/Google Appsheet: getting started/GSP 883.md
+++ b/Google Appsheet: getting started/GSP 883.md
@@ -27,7 +27,7 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**Download Excel file from here:**[Click here](Personal Contacts.xlsx)
+**Download Excel file from here:**[Click here](Personal_Contacts.xlsx)
 
 ---
 
