--- a/Google Appsheet: getting started/GSP 883.md
+++ b/Google Appsheet: getting started/GSP 883.md
@@ -27,7 +27,8 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**Download Excel file from here:**[Click here](Personal_Contacts.xlsx)
+**Download Excel file from here:**[Download Personal Contacts.xlsx](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/154ea59b1cb967d0fc785c2e476b07486dfae0f4/Google%20Appsheet%3A%20getting%20started/Personal%20Contacts.xlsx)
+
 
 ---
 
