--- a/Using the Natural Language API from Google Docs/GSP126.md
+++ b/Using the Natural Language API from Google Docs/GSP126.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨🌐 Using the Natural Language API from Google Docs || GSP126 ✨
+✨ Using the Natural Language API from Google Docs || GSP126 ✨
 <div align="center">
 <a href="" target="_blank" rel="noopener noreferrer">
     <img src="https://img.shields.io/badge/Open_Lab-Cloud_Skills_Boost-4285F4?style=for-the-badge&logo=google&logoColor=white&labelColor=34A853" alt="Open Lab Badge">
