--- a/Using the Natural Language API from Google Docs/GSP126.md
+++ b/Using the Natural Language API from Google Docs/GSP126.md
@@ -27,7 +27,7 @@
 
 ## ⚙️ Lab Environment Setup:
 
-**🌐Creatinf API Key:**[Go](https://console.cloud.google.com/apis/credentials)
+**🌐Go to this link for generating API Key:** [Click Here](https://console.cloud.google.com/apis/credentials)
 
 **Now follow this steps:**
 ---
