--- a/Google Apps Script: Access Google Sheets, Maps & Gmail in 4 Lines of Code/GSP235.md
+++ b/Google Apps Script: Access Google Sheets, Maps & Gmail in 4 Lines of Code/GSP235.md
@@ -48,7 +48,7 @@ function sendMap() {
     GmailApp.sendEmail("<YOUR_EMAIL>", "Map", 'See below.', {attachments:[map]});
 }
 ```
-# After these steps press Save-->Click Run in the Code Editor menu bar--->Click Review Permissions--->Authosrize
+# After these steps press Save-->Click Run in the Code Editor menu bar--->Click Review Permissions--->Authosrise--->Check Progress
 ---
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
