--- a/Develop with Apps Script and AppSheet: Challenge Lab/ARC126.md
+++ b/Develop with Apps Script and AppSheet: Challenge Lab/ARC126.md
@@ -39,7 +39,7 @@
 ## <ins>⚙️ Task 2: Add an automation to an AppSheet app</ins>
 
 1.  Open **My Drive** from **[this link](https://drive.google.com/drive/my-drive)**.
-2.  Download the required file **[here 📥](https://gourav8959-my.sharepoint.com/:f:/g/personal/gourav8959_gourav8959_onmicrosoft_com/Ejr59_zDiNRGko-iuLIritwBBmt-46CjuTLVqWpfzy9QeA?e=icLCtw)**.
+2.  Download the required file **[here 📥](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Develop%20with%20Apps%20Script%20and%20AppSheet:%20Challenge%20Lab/ArcadeWithUs.xlsx)**.
 
 ---
 
