--- a/Publish your AppSheet App/GSP1030.md
+++ b/Publish your AppSheet App/GSP1030.md
@@ -39,7 +39,7 @@
 
 3. Click into the left corner on sheets icon for the home page and click **`shipTo`**
 
-4. Download File from [here]()
+4. Download File from [here](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Publish%20your%20AppSheet%20App/gsp1030.xlsx)
 
 ---
 
