--- a/App Building with AppSheet: Challenge Lab/ARC105.md
+++ b/App Building with AppSheet: Challenge Lab/ARC105.md
@@ -35,7 +35,7 @@
 
 * Change the name: **`contacts`**
 
-2. Download File from [here]()
+2. Download File from [here](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/App%20Building%20with%20AppSheet:%20Challenge%20Lab/companies(ArcadeWithUs).xlsx)
 
 3. Import the downloaded file and make sure to change it as "`Replace The Spreadsheet`"
 
