--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -31,7 +31,9 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
+### Download excel sheet from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Use%20Charts%20in%20Google%20Sheets/On%20the%20Rise%20Bakery%20Sales%20and%20Locations.xlsx)
 
+### Download Presentation file from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Use%20Charts%20in%20Google%20Sheets/On%20the%20Rise%20Bakery.pptx)
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
