--- a/Finding Data in Google Sheets/GSP1063.md
+++ b/Finding Data in Google Sheets/GSP1063.md
@@ -31,7 +31,7 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-### Download file from here: [Download]()
+### Download file from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Finding%20Data%20in%20Google%20Sheets/ArcadeWithUs1063.xlsx)
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
