--- a/Using Custom Fields in Looker Explores /GSP983.md
+++ b/Using Custom Fields in Looker Explores /GSP983.md
@@ -48,9 +48,9 @@
 ---
 ![ArcadeWithUs](https://cdn.qwiklabs.com/xcy%2BT8AWDSpvIhOKTButNVN0s2A8weD9fQW9thP8Jl8%3D)
 ---
-7. Set the Field to measure to Inventory Items > Cost.
-8. Set the Measure type to Average.
-9. Set the Name to Average of Cost.
+7. Set the Field to measure to Inventory Items > `Cost`.
+8. Set the Measure type to **Average**.
+9. Set the Name to **`Average of Cost`**.
 10. On the Field details tab set the following:
     ### Format: `U.S. Dollars`
     ### Decimals: **`2`**
@@ -63,7 +63,15 @@
 ![ArcadeWithUs](https://cdn.qwiklabs.com/qYIFUML28%2FsAaT4rCESXzDRAD26EbuZBgUnyOZjTMTQ%3D)
 ---
 
-15.
+15. In the Group By State dialog, set the Add group name to **`Pacific Northwest`**.
+16. Click the is any value input box and add **`Oregon`**, **`Idaho`** and **`Washington`** to the list independently.
+17. Check the Group remaining values checkbox then click Save.
+18. Under the Custom Fields section select the *Filter* by field icon for the bottom `Average of Cost` under Measures.
+19. Set the drop down to `is greater than` and set its value to **`200`**.
+20. Run the query by clicking on the Run button in the top right of the page to view the results.
+21. Under Order Items section, click `Order Count` to add it to the view.
+22. In the data view, click `Settings` on the **`Order`** Count column.
+23. Click `Calculations` > **`% of column`**.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
