--- a/Looker Functions and Operators/GSP857.md
+++ b/Looker Functions and Operators/GSP857.md
@@ -30,8 +30,9 @@
 ## ⚙️ <ins>Lab Environment Setup</ins>
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
+---
 
-TASK 1:-
+### TASK 1:-
 ```
 # Place in `faa` model
 explore: +flights {
@@ -42,7 +43,18 @@ explore: +flights {
     }
   }
 ```
-TASK 2:-
+#### Just make some changes:
+1. Change visualization type to `Line`.
+2. Click on the settings gear icon for Visualization.
+3. Click *Edit* > `Plot`.
+4. Select the Legend Align as `Left`.
+5. Save the look in this title:
+```
+Flight Count by Departure Week and Distance Tier
+```
+![Output](https://cdn.qwiklabs.com/RIHVD0wvxpWP5TNcuq2pTNi1Ua7MYTF35E5UKzzCoZQ%3D)
+---
+### TASK 2:-
 ```
 # Place in `faa` model
 explore: +flights {
@@ -53,8 +65,15 @@ explore: +flights {
     }
   }
 ```
-
-TASK 3:-
+#### Just make some changes:
+1. Change visualization type to `Line`.
+2. Save the look in this title:
+```
+Percent of Flights Cancelled by State in 2000
+```
+![Output](https://cdn.qwiklabs.com/Z9ncUTo6XBAjz%2BeRj7dcMRy7eoTmiQdl1nPTYsypCQo%3D)
+---
+### TASK 3:-
 ```
 # Place in `faa` model
 explore: +flights {
@@ -65,8 +84,24 @@ explore: +flights {
     }
 }
 ```
-
-TASK 4:-
+#### Just make some changes:
+1. Next to *Custom Fields*, click `+ Add`. Select **`Table Calculation`**.
+2. In the `Expression field`, add the following Table Calculation:
+```
+${flights.cancelled_count}/${flights.count}
+```
+3. Click Default Formatting to change the format to `Percent (0)`.
+4. Rename the Table Calculation to "```Percent Cancelled ```".
+5. Click Save.
+6. Hover over the `Cancelled Count` column, and click the *gear icon* that appears on the right side.
+7. Click `Hide from Visualization`. Repeat the same process to hide the `Count` column from the Visualization.
+8. Save the look in this title:
+```
+Percent of Flights Cancelled by Aircraft Origin 2004
+```
+![Output](https://cdn.qwiklabs.com/98HOuoprIq%2FpliNWuK0czs2FRuuKmgtaHv3w%2Fo016TQ%3D)
+---
+### TASK 4:-
 ```
 # Place in `faa` model
 explore: +flights {
@@ -76,7 +111,21 @@ explore: +flights {
     }
 }
 ```
-
+#### Just make some changes:
+1. In the Data bar, click on the **Totals** checkbox next to `Row Limit`.
+2. Next to `Custom Fields`, click `+ Add`. Select **`Table Calculation`**. Add the following in Expression field:
+```
+${flights.total_distance}/${flights.total_distance:total}
+```
+3. Click Default Formatting to change the format to `Percent (0)`. Click **Save**.
+4. Hover over the **`Total Distance`** column, and click the gear icon that appears on the right side. Click **Hide from Visualization**.
+5. Click the arrow next to Visualization to expand the window. Change visualization type to `Bar`.
+6. Save the look in this title:
+```
+Percent of Total Distance Flown by Carrier
+```
+![Output](https://cdn.qwiklabs.com/FJLsjDeKLpIqwkGX5VfNRFhgUGUcmG3zFtsniJ2C69M%3D)
+---
 TASK 5:-
 ```
 # Place in `faa` model
@@ -88,6 +137,23 @@ explore: +flights {
     }
 }
 ```
+#### Just make some changes:
+1. Next to `Custom Fields`, click `+ Add`. Select **`Table Calculation`**. Add the following in Expression field:
+```
+(${flights.count}-pivot_offset(${flights.count}, -1))/pivot_offset(${flights.count}, -1)
+```
+2. Click Default Formatting to change the format to `Percent (0)`. Click Save.
+3. Hover over one of the **`Count`** columns, and click the gear icon that appears on the right side.
+4. Click Hide from Visualization. It should hide all of the **`Count columns`**. Click **Run**.
+5. Click the arrow next to Visualization to expand the window. Change visualization type to **`Table`**.
+6. Click on the settings gear icon for Visualization.
+7. Click `Edit` > **Formatting**
+8. Toggle the `Enable Conditional Formatting` to on. Accept the default options and click `Add a Rule`.
+9. Save the look in this title:
+```
+YoY Percent Change in Flights flown by Distance, 2000-Present
+```
+![Output](https://cdn.qwiklabs.com/VCf67qSG7cQIdkZ5HXR2qWFRYgneyz2x6bJqChGmKe8%3D)
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
