--- a/Looker Functions and Operators/GSP857.md
+++ b/Looker Functions and Operators/GSP857.md
@@ -30,6 +30,14 @@
 ## ⚙️ <ins>Lab Environment Setup</ins>
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
+
+### 🚨 First, click the toggle button to turn on the Development mode.
+![Arcade With Us](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
+
+---
+
+### 🚨 Go to Develop > qwiklabs-flights LookML project > faa model
+
 ---
 
 ### TASK 1:-
