--- a/Looker Functions and Operators/GSP857.md
+++ b/Looker Functions and Operators/GSP857.md
@@ -52,11 +52,12 @@ explore: +flights {
   }
 ```
 #### Just make some changes:
-1. Change visualization type to `Line`.
-2. Click on the settings gear icon for Visualization.
-3. Click *Edit* > `Plot`.
-4. Select the Legend Align as `Left`.
-5. Save the look in this title:
+1. Under `Flights` > `Dimensions`, click on the **Pivot** data button for **`Distance`** Tiered. Click Run.
+2. Change visualization type to `Line`.
+3. Click on the settings gear icon for Visualization.
+4. Click *Edit* > `Plot`.
+5. Select the Legend Align as `Left`.
+6. Save the look in this title:
 ```
 Flight Count by Departure Week and Distance Tier
 ```
