--- a/Looker Functions and Operators/GSP857.md
+++ b/Looker Functions and Operators/GSP857.md
@@ -52,7 +52,7 @@ explore: +flights {
   }
 ```
 #### Just make some changes:
-1. Under `Flights` > `Dimensions`, click on the **Pivot** data button for **`Distance`** Tiered. Click Run.
+1. Under `Flights` > `Dimensions`, click on the **Pivot** data button for **`Distance Tiered`**. Click Run.
 2. Change visualization type to `Line`.
 3. Click on the settings gear icon for Visualization.
 4. Click *Edit* > `Plot`.
