--- a/Looker Functions and Operators/GSP857.md
+++ b/Looker Functions and Operators/GSP857.md
@@ -147,7 +147,8 @@ explore: +flights {
 }
 ```
 #### Just make some changes:
-1. Next to `Custom Fields`, click `+ Add`. Select **`Table Calculation`**. Add the following in Expression field:
+1. Under Flights, within the `Depart Date` dimension group, click on the **Pivot** data button next to the `Year` dimension.
+2. Next to `Custom Fields`, click `+ Add`. Select **`Table Calculation`**. Add the following in Expression field:
 ```
 (${flights.count}-pivot_offset(${flights.count}, -1))/pivot_offset(${flights.count}, -1)
 ```
