--- a/Migrate MySQL Data to Cloud SQL using Database Migration Service: Challenge Lab/GSP351.md
+++ b/Migrate MySQL Data to Cloud SQL using Database Migration Service: Challenge Lab/GSP351.md
@@ -31,17 +31,39 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
+## **1️⃣ Enable APIs** 
+1. **Database Migration API**
+2. **Service Networking API**
 
-## 💻 **Execute in Cloud Shell** 
-```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Arcade%20Hero%3A%20Building%20Blocks%20Cloud%20Run%20functions%20II/ARC1221.sh
+## **2️⃣ Connect to the MySQL Interactive Console**  
 
-sudo chmod +x ARC1221.sh
+To connect to the MySQL interactive console, follow these steps:  
 
-./ARC1221.sh
-```
+1. Open your terminal and execute the following command:  
+   ```bash
+   mysql -u admin -p
+   ```  
+
+2. When prompted for the password, enter:  
+   ```bash
+   changeme
+   ```  
+
+---
+
+## **🛠3️⃣ Update Records in the Database**  
+
+Once connected to the MySQL console:  
+
+1. Switch to the `customers_data` database:  
+   ```sql
+   use customers_data;
+   ```  
+
+2. Update the `gender` field for a specific record using the following SQL command:  
+   ```sql
+   update customers set gender = 'FEMALE' where addressKey = 934;
+   ```  
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
