--- a/Prompt Design in Vertex AI: Challenge Lab/GSP519.md
+++ b/Prompt Design in Vertex AI: Challenge Lab/GSP519.md
@@ -1,7 +1,6 @@
 <h1 align="center">
 ✨ Prompt Design in Vertex AI: Challenge Lab || GSP519 ✨
 <div align="center">
-
 <a href="https://www.cloudskillsboost.google/focuses/86504?parent=catalog"_blank" rel="noopener noreferrer">
     <img src="https://img.shields.io/badge/Open_Lab-Cloud_Skills_Boost-4285F4?style=for-the-badge&logo=google&logoColor=white&labelColor=34A853" alt="Open Lab Badge">
   </a>
@@ -33,7 +32,7 @@
 
 ### Open in Incognito Window: [Click Here](https://console.cloud.google.com/vertex-ai/studio/saved-prompts?project=)
 
-### Download File no.1 From [here]()
+### Download File no.1 From [here](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Prompt%20Design%20in%20Vertex%20AI:%20Challenge%20Lab/Cymbal%20Tagline%20Generator%20Template.json)
 ### Download File no.2 From [here]()
 ### Download File no.3 From [here]()
 ### Download File no.4 From [here]()
