--- a/Prompt Design in Vertex AI: Challenge Lab/GSP519.md
+++ b/Prompt Design in Vertex AI: Challenge Lab/GSP519.md
@@ -32,7 +32,7 @@
 
 ### Open in Incognito Window: [Click Here](https://console.cloud.google.com/vertex-ai/studio/saved-prompts?project=)
 
-### Download File no.1 From [Download Cymbal Tagline Generator Template](Prompt%20Design%20in%20Vertex%20AI%3A%20Challenge%20Lab/Cymbal%20Tagline%20Generator%20Template.json)
+### Download File no.1 From [Download Cymbal Tagline Generator Template](https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Prompt%20Design%20in%20Vertex%20AI%3A%20Challenge%20Lab/Cymbal%20Tagline%20Generator%20Template.json)
 ### Download File no.2 From [here]()
 ### Download File no.3 From [here]()
 ### Download File no.4 From [here]()
