--- a/Prompt Design in Vertex AI: Challenge Lab/GSP519.md
+++ b/Prompt Design in Vertex AI: Challenge Lab/GSP519.md
@@ -32,7 +32,7 @@
 
 ### Open in Incognito Window: [Click Here](https://console.cloud.google.com/vertex-ai/studio/saved-prompts?project=)
 
-### Download File From []()
+### Download File From [Download Here](https://drive.google.com/drive/folders/1VSeOCOqb5B1USk-utr5GQu16x3_sDAmf?usp=sharing)
 ---
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
