--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -31,8 +31,24 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*## 🎉 **Congratulations! Lab Completed Successfully!** 🏆
 
+### Task 1. Filter on Dimensions
+---
+1. In the Looker navigation menu, click Explore. Under FAA, click Flights.
+2. Under Flight Details > Measures, click Cancelled Count.
+3. Under Flights > Dimensions > Depart Date, click Week.
+4. Within the Depart Date dimension group, click on the Filter button next to the Date dimension.
+5. In the filter window, set the Depart Date filter to: is in the year 2004.
+6. Change visualization type to Line. Click Run.
+7. Click Edit > Series.
+8. Under Point Style, click on Outline.
+9. Navigate to the Y menu of the visualization setting pane, scroll down to the bottom, and click on the Add Reference Line button.
+10. Click on the settings gear icon next to Run, and select Save > As a Look.
+11. Title the Look Cancelled Flight Count by Week in 2004.
+12. Click Save.
 
+![Demo](https://cdn.qwiklabs.com/QMkFTa1y9ODqyw54PTLR2kdkubJL09hVD0tEHwF72zA%3D)
 
+---
 Your hard work and determination paid off! 💻
 You've successfully completed the lab. **Way to go!** 🚀
 
