--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -49,6 +49,24 @@
 ![Demo](https://cdn.qwiklabs.com/QMkFTa1y9ODqyw54PTLR2kdkubJL09hVD0tEHwF72zA%3D)
 
 ---
+### Task 2. Filter on Measures
+---
+1. In the Looker navigation menu, click Explore. Under FAA, click Flights.
+2. Under Flights > Measures, click Count Long Flight.
+3. Under Flights > Measures, click Total Distance.
+4. Under Carriers > Dimensions, click Name.
+5. Under Flights > Measures, click on the Filter button next to the Percentage Long Flights measure.
+6. In the filter window, set the filter to: is less than or equal to .25.
+7. Change visualization type to Table. Click Run.
+8. Click Edit > Plot.
+9. Select “Gray” for the Table Theme.
+10. Toggle Show Row Numbers off.
+11. Click on the settings gear icon next to Run, and select Save > As a Look.
+12. Title the Look Total Distance and Long Flight Count by Carrier.
+13. Click Save.
+
+![Demo](https://cdn.qwiklabs.com/8IoTtjiuIgGAaHQmk53H%2F3iiLheUOJHxVAM6Scgja8o%3D)
+---
 Your hard work and determination paid off! 💻
 You've successfully completed the lab. **Way to go!** 🚀
 
