--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -66,6 +66,19 @@
 13. Click Save.
 
 ![Demo](https://cdn.qwiklabs.com/8IoTtjiuIgGAaHQmk53H%2F3iiLheUOJHxVAM6Scgja8o%3D)
+
+---
+### Task 3. Add Looks to a dashboardv
+---
+1. In the Looker navigation menu, click Folders.
+2. Select My folder.
+3. Click the Cancelled Flight Count by Week in 2004 Look.
+4. Click on the settings gear icon next to Run, and select Save > To an existing dashboard.
+5. Click New Dashboard.
+6. Enter a title for the new dashboard: Flights Data.
+7. Click Add Look to Dashboard.
+#### You will now repeat the same process for the second Look you created.
+
 ---
 Your hard work and determination paid off! 💻
 You've successfully completed the lab. **Way to go!** 🚀
