--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -68,7 +68,7 @@
 ![Demo](https://cdn.qwiklabs.com/8IoTtjiuIgGAaHQmk53H%2F3iiLheUOJHxVAM6Scgja8o%3D)
 
 ---
-### Task 3. Add Looks to a dashboardv
+### Task 3. Add Looks to a dashboard
 ---
 1. In the Looker navigation menu, click Folders.
 2. Select My folder.
