--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -33,7 +33,7 @@
 
 ### Task 1. Filter on Dimensions
 ---
-1. In the Looker navigation menu, click Explore. Under FAA, click Flights.
+1. In the Looker navigation menu, click **Explore**. Under **FAA**, click **Flights**.
 2. Under Flight Details > Measures, click Cancelled Count.
 3. Under Flights > Dimensions > Depart Date, click Week.
 4. Within the Depart Date dimension group, click on the Filter button next to the Date dimension.
