--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -38,7 +38,7 @@
 3. Under **Flights** > **Dimensions** > **Depart Date**, **`click Week`**.
 4. Within the Depart Date dimension group, click on the **Filter button** next to the **`Date`** dimension.
 5. In the filter window, set the `Depart Date filter` to: **`is in the year 2004`**.
-6. Change visualization type to Line. Click Run.
+6. Change visualization type to `Line`. Click **Run**.
 7. Click Edit > Series.
 8. Under Point Style, click on Outline.
 9. Navigate to the Y menu of the visualization setting pane, scroll down to the bottom, and click on the Add Reference Line button.
