--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -29,7 +29,7 @@
 
 ## ⚙️ <ins>Lab Environment Setup</ins>
 
-> ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*## 🎉 **Congratulations! Lab Completed Successfully!** 🏆
+> ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.
 
 ### Task 1. Filter on Dimensions
 ---
@@ -80,6 +80,7 @@
 #### You will now repeat the same process for the second Look you created.
 
 ---
+## 🎉 **Congratulations! Lab Completed Successfully!** 🏆 
 Your hard work and determination paid off! 💻
 You've successfully completed the lab. **Way to go!** 🚀
 
