--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -39,7 +39,7 @@
 4. Within the Depart Date dimension group, click on the **Filter button** next to the **`Date`** dimension.
 5. In the filter window, set the `Depart Date filter` to: **`is in the year 2004`**.
 6. Change visualization type to `Line`. Click **Run**.
-7. Click Edit > Series.
+7. Click **Edit** > **Series**.
 8. Under Point Style, click on Outline.
 9. Navigate to the Y menu of the visualization setting pane, scroll down to the bottom, and click on the Add Reference Line button.
 10. Click on the settings gear icon next to Run, and select Save > As a Look.
