--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -41,7 +41,7 @@
 6. Change visualization type to `Line`. Click **Run**.
 7. Click **Edit** > **Series**.
 8. Under Point Style, click on `Outline`.
-9. Navigate to the Y menu of the visualization setting pane, scroll down to the bottom, and click on the Add Reference Line button.
+9. Navigate to the `Y menu` of the visualization setting pane, _scroll down to the bottom_, and click on the **`Add Reference Line`** button.
 10. Click on the settings gear icon next to Run, and select Save > As a Look.
 11. Title the Look Cancelled Flight Count by Week in 2004.
 12. Click Save.
