--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -51,8 +51,8 @@
 ---
 ### Task 2. Filter on Measures
 ---
-1. In the Looker navigation menu, click Explore. Under FAA, click Flights.
-2. Under Flights > Measures, click Count Long Flight.
+1. In the Looker navigation menu, click **Explore**. Under **FAA**, click **Flights**.
+2. Under **Flights** > **Measures**, click **`Count Long Flight`**.
 3. Under Flights > Measures, click Total Distance.
 4. Under Carriers > Dimensions, click Name.
 5. Under Flights > Measures, click on the Filter button next to the Percentage Long Flights measure.
