--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -36,7 +36,7 @@
 1. In the Looker navigation menu, click **Explore**. Under **FAA**, click **Flights**.
 2. Under **Flight Details** > **Measures**, click **`Cancelled Count`**.
 3. Under **Flights** > **Dimensions** > **Depart Date**, **`click Week`**.
-4. Within the Depart Date dimension group, click on the **Filter button** next to the **`Date`** dimension.
+4. Within the Depart Date dimension group, click on the `Filter button` next to the **`Date`** dimension.
 5. In the filter window, set the `Depart Date filter` to: **`is in the year 2004`**.
 6. Change visualization type to `Line`. Click **Run**.
 7. Click **Edit** > **Series**.
@@ -55,7 +55,7 @@
 2. Under **Flights** > **Measures**, click **`Count Long Flight`**.
 3. Under **Flights** > **Measures**, click **`Total Distance`**.
 4. Under **Carriers** > **Dimensions**, click **`Name`**.
-5. Under Flights > Measures, click on the Filter button next to the Percentage Long Flights measure.
+5. Under **Flights** > **Measures**, click on the `Filter button` next to the **`Percentage Long Flights`** measure.
 6. In the filter window, set the filter to: is less than or equal to .25.
 7. Change visualization type to Table. Click Run.
 8. Click Edit > Plot.
