--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -57,7 +57,7 @@
 4. Under **Carriers** > **Dimensions**, click **`Name`**.
 5. Under **Flights** > **Measures**, click on the `Filter button` next to the **`Percentage Long Flights`** measure.
 6. In the filter window, `set the filter` to: **`is less than or equal to .25`**.
-7. Change visualization type to Table. Click Run.
+7. Change visualization type to `Table`. Click **Run**.
 8. Click Edit > Plot.
 9. Select “Gray” for the Table Theme.
 10. Toggle Show Row Numbers off.
