--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -58,8 +58,8 @@
 5. Under **Flights** > **Measures**, click on the `Filter button` next to the **`Percentage Long Flights`** measure.
 6. In the filter window, `set the filter` to: **`is less than or equal to .25`**.
 7. Change visualization type to `Table`. Click **Run**.
-8. Click Edit > Plot.
-9. Select “Gray” for the Table Theme.
+8. Click **Edit** > **Plot**.
+9. Select “`Gray`” for the **Table Theme**.
 10. Toggle Show Row Numbers off.
 11. Click on the settings gear icon next to Run, and select Save > As a Look.
 12. Title the Look **`Total Distance and Long Flight Count by Carrier`**.
