--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -61,7 +61,7 @@
 8. Click **Edit** > **Plot**.
 9. Select “`Gray`” for the **Table Theme**.
 10. Toggle `Show Row Numbers` **`off`**.
-11. Click on the settings gear icon next to Run, and select Save > As a Look.
+11. Click on the settings gear icon next to **Run**, and select **Save** > **`Save As a Look`**.
 12. Title the Look **`Total Distance and Long Flight Count by Carrier`**.
 13. Click **Save.**
 
