--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -71,7 +71,7 @@
 ### Task 3. Add Looks to a dashboard
 ---
 1. In the Looker navigation menu, click **Folders**.
-2. Select My folder.
+2. Select **My folder**.
 3. Click the Cancelled Flight Count by Week in 2004 Look.
 4. Click on the settings gear icon next to Run, and select Save > To an existing dashboard.
 5. Click New Dashboard.
