--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -49,7 +49,7 @@
 ![Demo](https://cdn.qwiklabs.com/QMkFTa1y9ODqyw54PTLR2kdkubJL09hVD0tEHwF72zA%3D)
 
 ---
-### Task 2. Filter on Measures
+### Task 2. Filter on Measures(Creating 2nd look)
 ---
 1. In the Looker navigation menu, click **Explore**. Under **FAA**, click **Flights**.
 2. Under **Flights** > **Measures**, click **`Count Long Flight`**.
