--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -31,7 +31,7 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.
 
-### Task 1. Filter on Dimensions(Creating !st look)
+### Task 1. Filter on Dimensions(Creating 1st look)
 ---
 1. In the Looker navigation menu, click **Explore**. Under **FAA**, click **Flights**.
 2. Under **Flight Details** > **Measures**, click **`Cancelled Count`**.
