--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -72,7 +72,7 @@
 ---
 1. In the Looker navigation menu, click **Folders**.
 2. Select **My folder**.
-3. Click the Cancelled Flight Count by Week in 2004 Look.
+3. Click the **`Cancelled Flight Count by Week in 2004 Look`**.
 4. Click on the settings gear icon next to Run, and select Save > To an existing dashboard.
 5. Click New Dashboard.
 6. Enter a title for the new dashboard: Flights Data.
