--- a/Filtering and Sorting Data in Looker/GSP855.md
+++ b/Filtering and Sorting Data in Looker/GSP855.md
@@ -75,7 +75,7 @@
 3. Click the **`Cancelled Flight Count by Week in 2004 Look`**.
 4. Click on the settings gear icon next to **Run**, and select **Save** > **`Save To an existing dashboard`**.
 5. Click **New Dashboard**.
-6. Enter a title for the new dashboard: Flights Data.
+6. Enter a title for the new dashboard: **`Flights Data`**.
 7. Click Add Look to Dashboard.
 #### You will now repeat the same process for the second Look you created.
 
