--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -35,6 +35,9 @@
 
 ### Download Presentation file from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Use%20Charts%20in%20Google%20Sheets/On%20the%20Rise%20Bakery.pptx)
 
+### For Task no 1
+1. 
+
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
