--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -36,7 +36,9 @@
 ### Download Presentation file from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Use%20Charts%20in%20Google%20Sheets/On%20the%20Rise%20Bakery.pptx)
 
 ### For Task no 1
-1. 
+1. In the left panel of the lab instructions, right-click Open Google Drive, and then click Open link in incognito window to sign into your lab student account.
+2. In the upper-right corner of Google Drive, click the Settings icon (settings.png), and then click Settings to open the settings page.
+3. Check the box to Convert uploads to Google Docs editor format.
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
