--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -42,7 +42,9 @@
 ---
 ### Download excel sheet from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Use%20Charts%20in%20Google%20Sheets/On%20the%20Rise%20Bakery%20Sales%20and%20Locations.xlsx)
 ---
-6. 
+6. To select all the items in column E of the Locations sheet, click the gray column label.
+7. To create a chart, at the top, click Insert > Chart.
+8. 
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
