--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -45,7 +45,9 @@
 6. To select all the items in column E of the Locations sheet, click the gray column label.
 7. To create a chart, at the top, click Insert > Chart.
 8. In the Chart editor pane, for Chart type, select Column chart.
-9. 
+
+### For Task no 2
+1. 
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
