--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -58,6 +58,8 @@
 6. In the Chart Editor pane, for Chart type, select Scatter chart.
 ---
 
+### For Task no 3 & 4
+1. In the left pane of Google Drive, click New > File upload.
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
