--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -36,7 +36,7 @@
 1. In the left panel of the lab instructions, right-click Open **Google Drive,** and then click Open link in **`incognito window`** to sign into your lab student account.
 2. In the **upper-right corner of Google Drive**, click the **Settings** icon, and then click Settings to open the settings page.
 3. Check the box to **`Convert uploads to Google Docs editor format`**.
-4. In the left pane, click New > File upload.
+4. In the left pane, click **New** > **File upload**.
 5. Select the file on your computer named On the Rise Bakery Sales and Locations.xlsx.
 ---
 ### Download excel sheet from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Use%20Charts%20in%20Google%20Sheets/On%20the%20Rise%20Bakery%20Sales%20and%20Locations.xlsx)
