--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -43,7 +43,7 @@
 ---
 6. To select all the items in column E of the **Locations** sheet, click the **gray column** label.
 7. To create a chart, at the top, click **Insert** > **Chart**.
-8. In the Chart editor pane, for Chart type, select Column chart.
+8. In the Chart editor pane, for Chart type, select **`Column chart`**.
 ---
 ### For Task no 2
 1. In the lower-left of your spreadsheet, click the sheet labeled Sales - South America.
