--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -46,7 +46,7 @@
 8. In the Chart editor pane, for Chart type, select **`Column chart`**.
 ---
 ### For Task no 2
-1. In the lower-left of your spreadsheet, click the sheet labeled Sales - South America.
+1. In the `lower-left of your spreadsheet`, click the sheet **`labeled Sales - South America`**.
 2. Select cells A1:M3, and then at the top, click Insert > Chart.
 3. A line chart should appear. Line charts are used to look at data over a time period.
 4. In the Chart editor pane, for Chart type, select Combo chart.
