--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -53,7 +53,7 @@
 ![Demo](https://cdn.qwiklabs.com/TdvOxYqzS%2FDkHf%2B1TUGbB6Aqk5dACbfGP2EsnvRMG7Q%3D)
 ---
 5. Select cells **`A1:M3`**, and then at the top, click **Insert** > **Chart**.
-6. In the Chart Editor pane, for Chart type, select Scatter chart.
+6. In the Chart Editor pane, for Chart type, select **`Scatter chart`**.
 ---
 
 ### For Task no 3 & 4
