--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -62,7 +62,7 @@
 ### Download Presentation file from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Use%20Charts%20in%20Google%20Sheets/On%20the%20Rise%20Bakery.pptx)
 ---
 2. When you see Upload complete in the `lower-right`, your file has uploaded successfully.
-3. `Double-click` on the newly uploaded file to **open it**, and then exit out of the Google Drive tab.
+3. `Double-click` on the newly uploaded file to **open it**, and then exit out of the **Google Drive tab**.
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
