--- a/Use Charts in Google Sheets/GSP1061.md
+++ b/Use Charts in Google Sheets/GSP1061.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨ Use Charts in Google Sheets || GSP1061 || ✨
+✨ Use Charts in Google Sheets || GSP1061 ✨
 </h1>
 
 <div align="center">
