--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨ Pub/Sub: Qwik Start - Python || GSP094 ✨
+✨ Validate Data in Google Sheets || GSP1062 ✨
 </h1>
 
 <div align="center">
