--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -30,3 +30,8 @@
 ## ⚙️ <ins>Lab Environment Setup</ins>
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
+
+---
+### For Task no 1
+1. Right-click On [The Rise Bakery Customers and Items](https://docs.google.com/spreadsheets/d/1Sj8mfklFylWM5XX_c50896UJu36gvJ6tG36Cwlg2_M8/edit?usp=sharing), and then click Open link in incognito window to open the spreadsheet.
+---
