--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -36,4 +36,5 @@
 1. Right-click On [The Rise Bakery Customers and Items](https://docs.google.com/spreadsheets/d/1Sj8mfklFylWM5XX_c50896UJu36gvJ6tG36Cwlg2_M8/edit?usp=sharing), and then click Open link in incognito window to open the spreadsheet.
 2. Click File > Make a copy.
 3. Click Make a copy in the modal window to save the copy of the sheet in My Drive.
+4. In the lower-left of your spreadsheet, click the sheet labeled Items to view the data specific to items from On the Rise Bakery.
 ---
