--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -41,5 +41,6 @@
 6. To sort by Number of Items in ascending order, right-click the heading for column C, and then click Sort sheet A to Z.
 7. In the lower-left of your spreadsheet, click Add Sheet (+) to add another sheet.
 8. Right-click the new sheet name, click Rename, and type Items Sorted By Unit Price
-9. In cell A1 of the new sheet, type or paste =SORT(Items!A1:Items!C15, Items!B1:Items!B15, FALSE)
+9. In cell A1 of the new sheet, type or paste
+  ```=SORT(Items!A1:Items!C15, Items!B1:Items!B15, FALSE)```
 ---
