--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -42,5 +42,7 @@
 7. In the lower-left of your spreadsheet, click Add Sheet (+) to add another sheet.
 8. Right-click the new sheet name, click Rename, and type Items Sorted By Unit Price
 9. In cell A1 of the new sheet, type or paste
-  ```=SORT(Items!A1:Items!C15, Items!B1:Items!B15, FALSE)```
+  ```
+  =SORT(Items!A1:Items!C15, Items!B1:Items!B15, FALSE)
+  ```
 ---
