--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -34,14 +34,14 @@
 ---
 ### For Task no 1
 1. Right-click On [The Rise Bakery Customers and Items](https://docs.google.com/spreadsheets/d/1Sj8mfklFylWM5XX_c50896UJu36gvJ6tG36Cwlg2_M8/edit?usp=sharing), and then click Open link in incognito window to open the spreadsheet.
-2. Click File > Make a copy.
+2. Click File > **Make a copy**.
 3. Click Make a copy in the modal window to save the copy of the sheet in My Drive.
-4. In the lower-left of your spreadsheet, click the sheet labeled Items to view the data specific to items from On the Rise Bakery.
-5. To freeze the first row, at the top, click View > Freeze > 1 row.
-6. To sort by Number of Items in ascending order, right-click the heading for column C, and then click Sort sheet A to Z.
-7. In the lower-left of your spreadsheet, click Add Sheet (+) to add another sheet.
-8. Right-click the new sheet name, click Rename, and type Items Sorted By Unit Price
-9. In cell A1 of the new sheet, type or paste
+4. In the lower-left of your spreadsheet, click the sheet labeled `Items` to view the data specific to items from On the Rise Bakery.
+5. To freeze the first row, at the top, click **View** > **Freeze** > **1 row**.
+6. To sort by Number of Items in ascending order, right-click the heading for `column C`, and then click **`Sort sheet A to Z`**.
+7. In the lower-left of your spreadsheet, click **Add Sheet (+)** to add another sheet.
+8. Right-click the new sheet name, click **Rename**, and type **`Items Sorted By Unit Price`**
+9. In cell A1 of the new sheet, **type or paste**
   ```
   =SORT(Items!A1:Items!C15, Items!B1:Items!B15, FALSE)
   ```
