--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -50,4 +50,5 @@
 1. Return to the **Items** sheet.
 2. Select `column A`, and then at the top, click **Data** > **Create a filter**.
 3. To filter out cinnamon buns, under `Filter by values`, clear the checkmark next to **`Cinnamon bun`**, and then click OK.
+4. To remove the filter, at the top, click **Data** > **Remove filter**.
 ---
