--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -51,9 +51,9 @@
 2. Select `column A`, and then at the top, click **Data** > **Create a filter**.
 3. To filter out cinnamon buns, under `Filter by values`, clear the checkmark next to **`Cinnamon bun`**, and then click OK.
 4. To remove the filter, at the top, click **Data** > **Remove filter**.
-5. Select cell A1.
-6. At the top, click Data > + Create a filter view.
-7. To filter out cinnamon buns, select the filter icon in cell A1, and then follow the previous process.
-8. To save the filter view, click Data > View options > Save view > Save.
-9. To delete the filter view, at the top, click Data > View options > Delete all views in tab.
+5. Select cell **A1**.
+6. At the top, click **Data** > + `Create a **filter view**`.
+7. To filter out cinnamon buns, select the filter icon in cell **A1**, and then follow the previous process.
+8. To save the filter view, click **Data** > **View options** > **Save view** > **Save**.
+9. To delete the filter view, at the top, click **Data** > **View options** > **Delete all views in tab**.
 ---
